--- a/assets/styles/layout/_main.scss
+++ b/assets/styles/layout/_main.scss
@@ -150,14 +150,41 @@ main{
       @media (min-width: 320px) and (max-width: 413px){
          justify-content: space-around;
          flex-wrap: wrap;
+         margin-bottom: 0;
+      }
+      ul{
+         font-size: 12px;
+         @media (min-width: 320px) and (max-width: 413px){
+            width: 150px;
+         }
+      }
+      li{
+         line-height: 0.9em;
+         font-size: 30px;
+         @media (min-width: 768px) and (max-width: 895px){
+                 font-size: 18px;
+              }
+         @media (min-width: 667px) and (max-width: 767px){
+            font-size: 16px;
+          }
+          @media (min-width: 414px) and (max-width: 666px){
+             font-size: 16px;
+          } 
+          @media (min-width: 320px) and (max-width: 413px){
+             font-size: 16px;
+          }
       }
       a{
+         color:white;
          @media (min-width: 768px) and (max-width: 895px){
             font-size: 12px;
          }
          @media (min-width: 667px) and (max-width: 767px){
             font-size: 10px;
          }
+      }
+      a:hover{
+         opacity: 0.5;
       }
    }
 }  
@@ -184,6 +211,7 @@ main{
        }
        @media (min-width: 768px) and (max-width: 895px){
           margin-left: 10px;
+          margin-top: 30px;
        }
        @media (min-width: 667px) and (max-width: 767px){
           margin-left: 10px;
@@ -194,14 +222,14 @@ main{
           margin-left: 10px;
           text-align: center;
           vertical-align: top;
-          margin-top: 0;
+          margin-top: 20px;
        }
        @media (min-width: 320px) and (max-width: 413px){
-         width: 150px;
          margin-left: 10px;
          text-align: center;
          vertical-align: top;
-         margin-top: 0;
+         padding-top: 0;
+         margin-top: 10px;
        }
 
        h2{
@@ -222,7 +250,7 @@ main{
             font-size: 18px;
          }
          @media (min-width: 320px) and (max-width: 413px){
-            font-size: 16px;
+            font-size: 20px;
          }
        }
     }
@@ -242,17 +270,17 @@ main{
    }
    @media (min-width: 768px) and (max-width: 895px){
       margin-left: 140px;
+      margin-top: 0;
    }
    @media (min-width: 667px) and (max-width: 767px){
       margin-left: 100px;
       margin-top: 0;
    }
    @media (min-width: 414px) and (max-width: 666px){
-      margin-left: 30px;
-      margin-top: 0;
+      margin:20px 0 0 20px;
    }
    @media (min-width: 320px) and (max-width: 413px){
-      margin-left: 15px;
+      margin-left: 210px;
       margin-top: 0;
    }
 
@@ -268,8 +296,11 @@ main{
          font-size: 14px;
       }
       @media (min-width: 320px) and (max-width: 413px){
-         font-size: 14px;
+         font-size: 9px;
       }
+   }
+   a:hover{
+      text-decoration: underline;
    }
 
    img{
@@ -285,6 +316,10 @@ main{
     display: block;
     margin-top: 55px;
     margin-bottom: 79px;
+    @media (min-width: 320px) and (max-width: 413px){
+      margin-bottom: 10px;
+      margin-top: 10px;
+   }
 
     .sectionEvents__Events-wrapper{
        display: flex;
@@ -324,8 +359,11 @@ main{
     }
     .sectionEvents__wrapper{
        position: relative;
-       
     }
+    .sectionEvents__Events-wrapper li:hover{
+      transform: scale(1.03);  
+    }
+
     .sectionEvents__Events-img{
        margin-bottom: 20px;
        @media (min-width: 768px) and (max-width: 895px){
@@ -365,6 +403,7 @@ main{
           color:$mainr;
           text-decoration: none;
        }
+
        @media (min-width: 768px) and (max-width: 895px){
           width: 200px;
          }
@@ -410,7 +449,7 @@ main{
        height: 700px;
     }
     @media (min-width: 320px) and (max-width: 413px){
-       height: 800px;
+       height: 750px;
     }
 
     .sectionNews__wrapper{
@@ -488,6 +527,7 @@ main{
        img{
           display: block;
           margin-top: 59px;
+          padding-bottom: 50px;
           @media (min-width: 1024px) and (max-width: 1099px){
              width: 300px;
           }
@@ -505,13 +545,17 @@ main{
           @media (min-width: 414px) and (max-width: 666px){
              display: block;
              width: 300px;
-             margin-top: 30px;
+             margin-top: 13px;
+             padding-bottom: 20px;
           }
           @media (min-width: 320px) and (max-width: 413px){
              display: block;
              width: 300px;
              margin-top:30px;
           }
+       }
+       img:hover{
+         transform: scale(1.02);
        }
     }
     .sectionNews__news{
@@ -524,16 +568,17 @@ main{
        font-family: "Montserrat";
        @media (min-width: 667px) and (max-width: 767px){
           text-align: center;
+          margin-top: 0;
        }
        @media (min-width: 414px) and (max-width: 666px){
           text-align: center;
-          margin-top: 50px;
+          margin-top: 0;
           display: flex;
           justify-content: space-around;
        }
        @media (min-width: 320px) and (max-width: 413px){
           text-align: center;
-          margin-top: 50px;
+          margin-top: 0;
           display: flex;
           justify-content: space-around;
        }
@@ -590,6 +635,10 @@ main{
                 vertical-align: sub;
              }
           }
+
+          a:hover{
+            text-decoration: underline;
+          }
          img{
             @media (min-width: 320px) and (max-width: 413px){
                vertical-align: sub;
@@ -632,7 +681,7 @@ main{
          @media (min-width: 320px) and (max-width: 413px){
             display: flex;
             width: 100%;
-            flex-wrap:wrap;
+            flex-wrap:nowrap;
             justify-content: center;
          }
        }
@@ -660,50 +709,60 @@ main{
              width:100px;
           }
          }
-       }
-
-       .sectionNews__news-content-text{
-          color: $mainr;
-          font-size: 16px;
-          float: right;
-          font-family: "Montserrat";
+        }
+        
+        .sectionNews__news-content-text{
+           color: $mainr;
+           font-size: 16px;
+           float: right;
+           font-family: "Montserrat";
           a{
              text-decoration: none;
              color: $mainb;
+             &:hover{
+               opacity: 0.5;
+             }
+
              @media (min-width: 667px) and (max-width: 767px){
+                font-size: 12px;
+               }
+             @media (min-width: 414px) and (max-width: 666px){
+                font-size: 13px;
+             }
+             @media (min-width: 320px) and (max-width: 413px){
                font-size: 12px;
-            }
+              }
           }
           @media (min-width: 896px) and (max-width: 1023px){
              float: right;
              margin-right: 50px;
-          }
-          @media (min-width: 768px) and (max-width: 895px){
-             float: right;
+            }
+            @media (min-width: 768px) and (max-width: 895px){
+               float: right;
              margin-right: 50px;
-          }
-          @media (min-width: 667px) and (max-width: 767px){
+            }
+            @media (min-width: 667px) and (max-width: 767px){
              float: right;
              margin-right: 0;
-          }
-          @media (min-width: 414px) and (max-width: 666px){
-             float: right;
-             margin-right: 0;
+            }
+            @media (min-width: 414px) and (max-width: 666px){
+               float: right;
+               margin-right: 0;
           }
           @media (min-width: 320px) and (max-width: 413px){
              float: right;
              margin-right: 0;
-          }
-          p{
-             margin-bottom: 14px;
+            }
+            p{
+               margin-bottom: 14px;
              @media (min-width: 320px) and (max-width: 413px){
                 margin-left: 5px;
-             }
-          }
+               }
+            }
 
-          p:nth-child(2){
-            color:$mainb;
-            font-size: 21px;
+            p:nth-child(2){
+               color:$mainb;
+               font-size: 21px;
             margin-bottom: 0;
             font-family: "Montserrat";
             @media (min-width: 896px) and (max-width: 1023px){
@@ -721,8 +780,8 @@ main{
             @media (min-width: 320px) and (max-width: 413px){
                font-size: 14px;
             }
-          }
-       }
+         }
+      }
     }
- }
+   }
 }
